--- a/style.css
+++ b/style.css
@@ -144,15 +144,27 @@ nav > a:hover {
     color: hsl(218, 84%, 55%);
 }
 
+#landing {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 16px;
+}
+
+#landing p {
+    margin-bottom: 32px;
+}
+
 #landing > div:first-child {
-    width: 65%;
+    width: 60%;
     float: left;
 }
 
 #landing > div:last-child {
-    width: 35%;
+    width: 40%;
     float: left;
 }
+
 
 #about {
     display: flex;
