--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ nav > a:hover {
 #landing {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     column-gap: 16px;
 }
 
